ch4: added lyon dialogue & polish, swapped ch2 bgm

--- a/ArgonChalice.ltproj/game_data/events/4_1_mentorAppears.json
+++ b/ArgonChalice.ltproj/game_data/events/4_1_mentorAppears.json
@@ -1,7 +1,7 @@
 [
     {
         "name": "mentorAppears",
-        "trigger": "unit_wait",
+        "trigger": "turn_change",
         "level_nid": "4_1",
         "condition": "game.level.regions.get('mentorArea').contains(game.get_unit('MC').position)",
         "commands": [
