MAJOR BUGS FIXED AFTER WALKTHROUGH

--- a/ArgonChalice.ltproj/game_data/events/2_4_mentorAppears.json
+++ b/ArgonChalice.ltproj/game_data/events/2_4_mentorAppears.json
@@ -38,6 +38,19 @@
                 ]
             ],
             [
+                "resurrect",
+                [
+                    "Mentor"
+                ]
+            ],
+            [
+                "change_team",
+                [
+                    "Mentor",
+                    "enemy"
+                ]
+            ],
+            [
                 "add_unit",
                 [
                     "Mentor",
@@ -252,6 +265,6 @@
         ],
         "only_once": true,
         "priority": 20,
-        "source": "speak;Schuri;Look!\nmove_cursor;17,9\nflicker_cursor;17,9\nmove_cursor;MC\nspeak;Schuri;Those walls look fragile, we can break through!\nadd_unit;Mentor;7,12;warp;push\nflicker_cursor;Mentor;immediate\nmove_cursor;MC\nadd_portrait;Senya;OffscreenLeft\nadd_portrait;Schuri;OffscreenLeft\nadd_portrait;MC;MidLeft\nadd_portrait;PossessedCyrus;FarRight\nspeak;MC;Teach?!\nmove_portrait;Schuri;Left\nmove_portrait;Senya;FarLeft\nspeak;Schuri;He looks like...Lord Rikard...his skin...\nspeak;PossessedCyrus;...\nspeak;Schuri;Sir Cyrus...\nspeak;Senya;...I..I get it, I'll put you out of your misery.\nmove_portrait;Schuri;Right\nmirror_portrait;Schuri\nbop_portrait;Schuri\nspeak;Schuri;Wait! Senya please!\nspeak;Senya;What are you doing Schuri!? Don't turn your back to him!\nmirror_portrait;Schuri\nmirror_portrait;Schuri\nspeak;Schuri;Look! He's not attacking!|He must still be fighting in there!|We could still save him!|If we stop the ritual, Sir Aesc might be able to find a way...|Sir Aesc would surely find a way to save his pupil!\nspeak;Senya;...Schuri|Open your eyes...|That wound that was on his chest...|He never made it out...|He's been suffering all this time.|The least we can do is put him to rest.\nmove_portrait;Schuri;MidRight\nspeak;Schuri;{var:MC_name}...please!|Let's leave Sir Cyrus here and go defeat that necromancer.\nspeak;Senya;{var:MC_name}, We need to put him to rest.|There's no magic that can bring someone back from the dead.|We need to be the sane ones here.|At any minute the control could take over.\nexpression;MC;CloseEyes\nspeak;MC;How should I deal with Teach...?;;;thought_bubble\nmulti_remove_portrait;MC;Senya;Schuri;PossessedCyrus\nchange_portrait;Mentor;PossessedCyrus\n"
+        "source": "speak;Schuri;Look!\nmove_cursor;17,9\nflicker_cursor;17,9\nmove_cursor;MC\nspeak;Schuri;Those walls look fragile, we can break through!\nresurrect;Mentor\nchange_team;Mentor;enemy\nadd_unit;Mentor;7,12;warp;push\nflicker_cursor;Mentor;immediate\nmove_cursor;MC\nadd_portrait;Senya;OffscreenLeft\nadd_portrait;Schuri;OffscreenLeft\nadd_portrait;MC;MidLeft\nadd_portrait;PossessedCyrus;FarRight\nspeak;MC;Teach?!\nmove_portrait;Schuri;Left\nmove_portrait;Senya;FarLeft\nspeak;Schuri;He looks like...Lord Rikard...his skin...\nspeak;PossessedCyrus;...\nspeak;Schuri;Sir Cyrus...\nspeak;Senya;...I..I get it, I'll put you out of your misery.\nmove_portrait;Schuri;Right\nmirror_portrait;Schuri\nbop_portrait;Schuri\nspeak;Schuri;Wait! Senya please!\nspeak;Senya;What are you doing Schuri!? Don't turn your back to him!\nmirror_portrait;Schuri\nmirror_portrait;Schuri\nspeak;Schuri;Look! He's not attacking!|He must still be fighting in there!|We could still save him!|If we stop the ritual, Sir Aesc might be able to find a way...|Sir Aesc would surely find a way to save his pupil!\nspeak;Senya;...Schuri|Open your eyes...|That wound that was on his chest...|He never made it out...|He's been suffering all this time.|The least we can do is put him to rest.\nmove_portrait;Schuri;MidRight\nspeak;Schuri;{var:MC_name}...please!|Let's leave Sir Cyrus here and go defeat that necromancer.\nspeak;Senya;{var:MC_name}, We need to put him to rest.|There's no magic that can bring someone back from the dead.|We need to be the sane ones here.|At any minute the control could take over.\nexpression;MC;CloseEyes\nspeak;MC;How should I deal with Teach...?;;;thought_bubble\nmulti_remove_portrait;MC;Senya;Schuri;PossessedCyrus\nchange_portrait;Mentor;PossessedCyrus\n"
     }
 ]
